# tigermemory

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  index.md  pyproject.toml  requirements-mcp.txt  tigermemory_cli.py
.codex/: config.toml.example
.githooks/: commit-msg  post-commit  pre-commit  pre-push
docs/: connect-your-ai-tools.md
schemas/: PAGE_FORMATS.md  index.md
tests/: __init__.py  test_bootstrap_paths.py  test_dashboard_update_status.py  test_openmemory_patches.py  test_phase_b_triage.py  test_pre_push_publish_smoke.py  test_project_canvas_autocommit_guard.py  test_public_boundary.py  test_public_taxonomy.py  test_retrieval_layer_policy.py  test_session_canvas_builder.py  test_session_fallback_generator.py  test_session_handoff_auto_wrap.py  test_session_rolling_summary.py  test_tm_agent_connect.py  test_tm_agent_context.py  test_tm_agent_doctor.py  test_tm_answer.py  test_tm_answer_cli.py  test_tm_answer_eval.py  test_tm_answer_trace.py  test_tm_cli.py  test_tm_compile_index_preview.py  test_tm_compile_systemd_inventory.py  test_tm_config_explain.py  test_tm_core.py  test_tm_core_embed_retry.py  test_tm_core_transport_security.py  test_tm_cron_apply.py  test_tm_cron_apply_inbox_aging.py  test_tm_daily_health_summary.py  test_tm_deep_dive_jobs.py  test_tm_dev_supervisor_context_pack.py  test_tm_dev_supervisor_review.py  test_tm_digest.py  test_tm_direction1_vectors.py  test_tm_dual_write_accelerator.py  test_tm_embed_index.py  test_tm_embed_memories.py  test_tm_eval_runner.py  (+56 more)
tools/: _bootstrap_paths.py  tm_add_title_from_aliases.py  tm_agent_connect.py  tm_agent_context.py  tm_agent_doctor.py  tm_answer.py  tm_answer_eval.py  tm_answer_funnel_compare.py  tm_answer_miss_ledger.py  tm_answer_trace.py  tm_api.py  tm_apply_patch.py  tm_apply_patch_test.py  tm_backlinks.py  tm_backlinks_test.py  tm_compile_index.py  tm_compile_index_test.py  tm_compile_systemd_inventory.py  tm_config_explain.py  tm_core.py  tm_daily_health_summary.py  tm_dashboard_prefs.py  tm_dashboard_smoke.py  tm_deep_dive_jobs.py  tm_dev_supervisor_context_pack.py  tm_dev_supervisor_review.py  tm_digest.py  tm_doubao_hybrid_index.py  tm_dual_write_accelerator.py  tm_embed_index.py  tm_embed_memories.py  tm_eval_runner.py  tm_expense.py  tm_expense_backup.py  tm_expense_digest.py  tm_expense_import_alipay.py  tm_expense_import_unified.py  (+57 more)
(+22 files in other folders)
