[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tigermemory"
version = "0.4.0"
description = "Local-first LLM wiki and memory runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Internal; open-source release pending publish guard clearance" }

[project.scripts]
tm = "tigermemory_cli:main"

[tool.setuptools]
py-modules = ["tigermemory_cli"]

[tool.setuptools.packages.find]
where = [
  "packages/tigerledger/src",
  "packages/tigermemory-answer/src",
  "packages/tigermemory-config/src",
  "packages/tigermemory-core/src",
  "packages/tigermemory-digest/src",
  "packages/tigermemory-doctor/src",
  "packages/tigermemory-eval/src",
  "packages/tigermemory-index/src",
  "packages/tigermemory-lessons/src",
  "packages/tigermemory-minimax/src",
  "packages/tigermemory-persona/src",
  "packages/tigermemory-protocols/src",
  "packages/tigermemory-publish/src",
  "packages/tigermemory-route/src",
  "packages/tigermemory-search/src",
]
